--- a/flask_gallery/templates/layout.html
+++ b/flask_gallery/templates/layout.html
@@ -33,10 +33,9 @@
                 <a class="nav-item nav-link" href="{{ url_for('render_gallery', tag='None', allbooks=0, read=0) }}">Unread</a>
               </div>
               <!-- Navbar Right Side -->
-              <!-- <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/">Login</a>
-                <a class="nav-item nav-link" href="/">Register</a>
-              </div> -->
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="{{ url_for('search_title') }}">Search Title</a>
+              </div>
             </div>
           </div>
         </nav>
