--- a/flask_gallery/templates/gallery.html
+++ b/flask_gallery/templates/gallery.html
@@ -23,6 +23,7 @@
             <span style="font-size: 10px;">{{ tagtype }}:</span>
             {% for tag, tagcount in tags[tagtype] %}
                 <a class="tags" href="{{ url_for('render_gallery', 
+                                                 page=1, 
                                                  tag=tagtype+':'+tag, 
                                                  allbooks=allbooks, 
                                                  read=read) }}">
@@ -54,8 +55,48 @@
             <br />
         {% endfor %}
     </div>
+    
+    <div class="row justify-content-center" style="margin-top: 15px;">
+        <div>
+            <table class="page_button_bars pbb_table">
+                <tr class="pbb_table">
+                    {% if page > 1 %}
+                        {% set prev_href = url_for('render_gallery', page=page-1, tag='None', allbooks=allbooks, read=read) %}
+                        {% set lbutton = "background-color: initial;" %}
+                    {% else %}
+                        {% set prev_href = "#" %}
+                        {% set lbutton = "background-color: #666;" %}
+                    {% endif %}
+                    {% if page < total_pages %}
+                        {% set next_href = url_for('render_gallery', page=page+1, tag='None', allbooks=allbooks, read=read) %}
+                        {% set rbutton = "background-color: initial;" %}
+                    {% else %}
+                        {% set next_href = "#" %}
+                        {% set rbutton = "background-color: #666;" %}
+                    {% endif %}
+                        <td class="pbb_table" style="{{ lbutton }}"><a class="page_buttons" href="{{ prev_href }}">&lt;</a></td>
+                        <td class="pbb_table" style="{{ lbutton }}"><a class="page_buttons" href="{{ url_for('render_gallery', page=1, tag='None', allbooks=allbooks, read=read) }}">1</a></td>
+                    {% for pb in range(page-4, page+5) %}
+                        {% if 1 < pb < total_pages %}
+                            {% if pb == page %}
+                                {% set cbutton = "background-color: #666;" %}
+                            {% else %}
+                                {% set cbutton = "background-color: initial;" %}
+                            {% endif %}
+                            <td class="pbb_table" style="{{ cbutton }}"><a class="page_buttons" href="{{ url_for('render_gallery', page=pb, tag='None', allbooks=allbooks, read=read) }}">{{ pb }}</a></td>
+                        {% endif %}
+                    {% endfor %}
+                    {% if total_pages > 1 %}
+                        <td class="pbb_table" style="{{ rbutton }}"><a class="page_buttons" href="{{ url_for('render_gallery', page=total_pages, tag='None', allbooks=allbooks, read=read) }}">{{ total_pages }}</a></td>
+                    {% endif %}
+                    <td class="pbb_table" style="{{ rbutton }}"><a class="page_buttons" href="{{ next_href }}">&gt;</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
     <div id="bookshelf" class="content-section row row-cols-3 row-cols-lg-5">
-        {% for book in books[::-1] %}
+        {% for book in books %}
             <div class="book_covers">
                 <div class="book_titles">
                     <a href="{{ url_for('bookpage', book_id=book['_id'], contents=book['contents']) }}">
@@ -74,5 +115,30 @@
                 </div>
             </div>
         {% endfor %}
+    </div>
+    
+    <div class="row justify-content-center" style="margin-bottom: 15px;">
+        <div>
+            <table class="page_button_bars pbb_table">
+                <tr class="pbb_table">
+                        <td class="pbb_table" style="{{ lbutton }}"><a class="page_buttons" href="{{ prev_href }}">&lt;</a></td>
+                        <td class="pbb_table" style="{{ lbutton }}"><a class="page_buttons" href="{{ url_for('render_gallery', page=1, tag='None', allbooks=allbooks, read=read) }}">1</a></td>
+                    {% for pb in range(page-4, page+5) %}
+                        {% if 1 < pb < total_pages %}
+                            {% if pb == page %}
+                                {% set cbutton = "background-color: #666;" %}
+                            {% else %}
+                                {% set cbutton = "background-color: initial;" %}
+                            {% endif %}
+                            <td class="pbb_table" style="{{ cbutton }}"><a class="page_buttons" href="{{ url_for('render_gallery', page=pb, tag='None', allbooks=allbooks, read=read) }}">{{ pb }}</a></td>
+                        {% endif %}
+                    {% endfor %}
+                    {% if total_pages > 1 %}
+                        <td class="pbb_table" style="{{ rbutton }}"><a class="page_buttons" href="{{ url_for('render_gallery', page=total_pages, tag='None', allbooks=allbooks, read=read) }}">{{ total_pages }}</a></td>
+                    {% endif %}
+                    <td class="pbb_table" style="{{ rbutton }}"><a class="page_buttons" href="{{ next_href }}">&gt;</a></td>
+                </tr>
+            </table>
+        </div>
     </div>
 {% endblock content %}
