Improved the search feature.

--- a/flask_gallery/templates/book.html
+++ b/flask_gallery/templates/book.html
@@ -12,6 +12,7 @@
             <br />
         {% endfor %}
     </div>
+    <div class="row justify-content-center" style="font-weight: bold;">{{ title }}</div>
     <div style="text-align: center; font-weight: bold; font-size: 8px;">
         {% if read %}
             <div style="float:right;" class="bg-success col-1">Read</div>
