--- a/flask_gallery/templates/layout.html
+++ b/flask_gallery/templates/layout.html
@@ -34,7 +34,7 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{{ url_for('search_title', page=1) }}">Search Title</a>
+                <a class="nav-item nav-link" href="{{ url_for('search_title', page=1) }}">Search</a>
               </div>
             </div>
           </div>
